--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
     <div clasName="-experiance">
       Frelancer e Projetos pessoais e academicos.
     </div>
+    <footer>
+      <span>Jean Santos</span>
+    </footer>
   </body>
 </html>
