--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       Frelancer e Projetos pessoais e academicos.
     </div>
     <footer>
-      <span>Jean Santos</span>
+      <h2>Jean Santos</h2>
+      <span>2021</span>
     </footer>
   </body>
 </html>
