--- a/index.html
+++ b/index.html
@@ -1,43 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>Jean Santos - Developer Front-end</title>
   </head>
   <body>
-    <div className="-header">
-      <h1 className="-title"> Jean Santos</h1>
-    </div>
-    <div className="Card-me">
-      <h2> Redes Sociais</h2>
-      <p>Image</p>
-      <p> Follow me on Github</p>
-      <p>Image</p>
-      <p> Follow me on Linkedin</p>
-      <p>Image</p>
-      <p> Follow me on Facebook</p>
-      <p>Image</p>
-      <p> Follow me on Instagram</p>
-    </div>
-    <div className="about-me">
-      <h2>Sobre mim</h2>
-      <p> Me chamo Jean Carlos, sou da cidade do Vale Real,terminei recentimente
-        o meu curso de Análise e Desenvolvimento de Sistemas no IFRS - Campus Feliz.
-      </p>
-    </div>
-    <div className="-skills">
-      <h2>Skills</h2>
-      <p>Imagens serão adicionadas aqui</p>
-      <h2> Estou aprendendo</h2>
-      <p>Imagens serão adicionadas aqui</p>
-      <h2> Tenho interesse</h2>
-      <p>Imagens serão adicionadas aqui</p>
-    </div>
-    <div clasName="-experiance">
-      Frelancer e Projetos pessoais e academicos.
-    </div>
-    <footer>
-      <h2>Jean Santos</h2>
-      <span>2021</span>
-    </footer>
+    <h1>Jean Santos</h1>
+    <img src="img/profile.png" alt="Minha Foto de Perfil">
   </body>
 </html>
