--- a/index.html
+++ b/index.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/title.css" />
+    <link rel="stylesheet" href="styles/svg.css" />
+    <link rel="stylesheet" href="styles/header.css" />
+    <link rel="stylesheet" href="styles/home.css" />
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
     <title>Jean Santos - Developer Front-end</title>
   </head>
   <body>
-    <h1>Jean Santos</h1>
-    <img src="img/profile.png" alt="Minha Foto de Perfil">
+    <h1>Alterar largura do header para deixar o corpo do site ao lado do header</h1>
+    <h1 class="title">Jean Santos</h1>
+    <section class="header">
+      <figure>
+        <img src="img/profile.png" alt="Minha Foto de Perfil" />
+        <figcaption>Desenvolvedor Front-End</figcaption>
+      </figure>
+      <section>
+        <h3>Redes Sociais</h3>
+        <figure >
+          <a href="https://github.com/jeanAt2" target="_blank">
+            <img class="svg-social-media" src="svg/social-github-outline.svg" alt="Simbolo GitHub" />
+            <label>Follow me on Github</label>
+          <a/>
+        </figure>
+        <figure >
+          <a href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
+            <img class="svg-social-media" src="svg/social-linkedin-outline.svg" alt="Simbolo Linkedin" />
+            <label>Follow me on Linkedin</label>
+          </a>
+        </figure>
+        <figure >
+          <a href="https://www.instagram.com/jean.at2/" target="_blank">
+            <img class="svg-social-media" src="svg/social-instagram-outline.svg" alt="Simbolo Instagram" />
+            <label>Follow me on instagram</label>
+          </a>
+        </figure>
+        <figure >
+          <a href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
+            <img class="svg-social-media" src="svg/social-facebook-outline.svg" alt="Simbolo Facebook" />
+            <label>Follow me on Facebook</label>
+          </a>
+        </figure>
+      </section>
+    </section>
+    <div class="home">
+      <section>
+        <h2>Sobre mim</h2>
+          <p>Me chamo Jean Carlos, sou da cidade de Vale Real, 
+          terminei recentemente o meu curso de Análise e 
+          Desenvolvimento de Sistemas no IFRS- Campus Feliz.
+          </p>
+      </section>
+      <section>
+        <figure>
+          <h2>Skills</h2>
+          <img src="img/html5.png" alt="Html 5"/>
+          <img src="img/css3.png" alt="CSS 3"/>
+          <img src="img/javascript.png" alt="JavaScript"/>
+      </figure>
+      <figure>
+        <h2>Estou estudando</h2>
+        <img src="img/react.png" alt="ReactJS">
+      </figure>
+      <figure>
+        <h2>Tenho interesse</h2>
+        <img src="img/nodejs.png" alt="NodeJS">
+      </figure>
+      </section>
+      <section>
+        <h2>Experiências</h2>
+        <p>Freelancer, projetos pessoais e acadêmicos.</p>
+      </section>
+    </div>
   </body>
 </html>
