--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/title.css" />
+    <link rel="stylesheet" href="styles/sub-title.css" />
     <link rel="stylesheet" href="styles/svg.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/home.css" />
@@ -15,42 +16,39 @@
     <title>Jean Santos - Developer Front-end</title>
   </head>
   <body>
-    <h1>Alterar largura do header para deixar o corpo do site ao lado do header</h1>
     <h1 class="title">Jean Santos</h1>
     <section class="header">
       <figure>
         <img src="img/profile.png" alt="Minha Foto de Perfil" />
-        <figcaption>Desenvolvedor Front-End</figcaption>
+        <figcaption class="fig-title">Desenvolvedor Front-End</figcaption>
       </figure>
-      <section>
-        <h3>Redes Sociais</h3>
-        <figure >
-          <a href="https://github.com/jeanAt2" target="_blank">
+      <h3 class="sub-title ">Redes Sociais</h3>
+        <figure class="socialMedia">
+          <a class ="link-media" href="https://github.com/jeanAt2" target="_blank">
             <img class="svg-social-media" src="svg/social-github-outline.svg" alt="Simbolo GitHub" />
             <label>Follow me on Github</label>
           <a/>
         </figure>
-        <figure >
-          <a href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
+        <figure class="socialMedia">
+          <a class ="link-media" href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
             <img class="svg-social-media" src="svg/social-linkedin-outline.svg" alt="Simbolo Linkedin" />
             <label>Follow me on Linkedin</label>
           </a>
         </figure>
-        <figure >
-          <a href="https://www.instagram.com/jean.at2/" target="_blank">
+        <figure class="socialMedia">
+          <a class ="link-media" href="https://www.instagram.com/jean.at2/" target="_blank">
             <img class="svg-social-media" src="svg/social-instagram-outline.svg" alt="Simbolo Instagram" />
             <label>Follow me on instagram</label>
           </a>
         </figure>
-        <figure >
-          <a href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
+        <figure class="socialMedia">
+          <a class ="link-media" href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
             <img class="svg-social-media" src="svg/social-facebook-outline.svg" alt="Simbolo Facebook" />
             <label>Follow me on Facebook</label>
           </a>
         </figure>
-      </section>
     </section>
-    <div class="home">
+    <sections class="home">
       <section>
         <h2>Sobre mim</h2>
           <p>Me chamo Jean Carlos, sou da cidade de Vale Real, 
@@ -78,6 +76,6 @@
         <h2>Experiências</h2>
         <p>Freelancer, projetos pessoais e acadêmicos.</p>
       </section>
-    </div>
+    </sections>
   </body>
 </html>
