--- a/index.html
+++ b/index.html
@@ -7,78 +7,91 @@
     />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/body.css" />
     <link rel="stylesheet" href="styles/title.css" />
     <link rel="stylesheet" href="styles/sub-title.css" />
+    <link rel="stylesheet" href="styles/about-me.css" />
+    <link rel="stylesheet" href="styles/competence.css" />
+    <link rel="stylesheet" href="styles/skills.css" />
     <link rel="stylesheet" href="styles/link-media.css" />
     <link rel="stylesheet" href="styles/socialMedia.css" />
     <link rel="stylesheet" href="styles/svg.css" />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/text.css" />
+    <link rel="stylesheet" href="styles/expertise.css" />
+    <link rel="stylesheet" href="styles/social-media-me.css" />
     <script src="https://unpkg.com/feather-icons"></script>
     <title>Jean Santos - Developer Front-end</title>
   </head>
-  <body>
+  <body class ="root">
     <h1 class="title">Jean Santos</h1>
-    <section class="header">
-      <figure>
-        <img src="img/profile.png" alt="Minha Foto de Perfil" />
-        <figcaption class="fig-title">Desenvolvedor Front-End</figcaption>
-      </figure>
-      <h3 class="sub-title ">Redes Sociais</h3>
-        <figure class="socialMedia">
-          <a class ="link-media" href="https://github.com/jeanAt2" target="_blank">
-            <i data-feather="github"></i>
-            <label>Follow me on Github</label>
-          <a/>
-        </figure>
-        <figure class="socialMedia">
-          <a class ="link-media" href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
-            <i data-feather="linkedin"></i>
-            <label>Follow me on Linkedin</label>
-          </a>
-        </figure>
-        <figure class="socialMedia">
-          <a class ="link-media" href="https://www.instagram.com/jean.at2/" target="_blank">
-            <i data-feather="instagram"></i>
-            <label>Follow me on instagram</label>
-          </a>
-        </figure>
-        <figure class="socialMedia">
-          <a class ="link-media" href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
-            <i data-feather="facebook"></i>
-            <label>Follow me on Facebook</label>
-          </a>
-        </figure>
-    </section>
-    <sections class="home">
-      <section>
-        <h2>Sobre mim</h2>
-          <p>Me chamo Jean Carlos, sou da cidade de Vale Real, 
-          terminei recentemente o meu curso de Análise e 
-          Desenvolvimento de Sistemas no IFRS- Campus Feliz.
-          </p>
-      </section>
-      <section>
+    <div class="body">
+      <section class="header">
         <figure>
-          <h2>Skills</h2>
-          <img src="img/html5.png" alt="Html 5"/>
-          <img src="img/css3.png" alt="CSS 3"/>
-          <img src="img/javascript.png" alt="JavaScript"/>
-      </figure>
-      <figure>
-        <h2>Estou estudando</h2>
-        <img src="img/react.png" alt="ReactJS">
-      </figure>
-      <figure>
-        <h2>Tenho interesse</h2>
-        <img src="img/nodejs.png" alt="NodeJS">
-      </figure>
+          <img src="img/profile.png" alt="Minha Foto de Perfil" />
+          <figcaption class="fig-title">Desenvolvedor Front-End</figcaption>
+        </figure>
+        <section class="social-media-me">
+          <h3 class="sub-title ">Redes Sociais</h3>
+            <figure class="socialMedia">
+              <a class ="link-media" href="https://github.com/jeanAt2" target="_blank">
+                <i data-feather="github"></i>
+                <label>Follow me on Github</label>
+              <a/>
+            </figure>
+            <figure class="socialMedia">
+              <a class ="link-media" href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
+                <i data-feather="linkedin"></i>
+                <label>Follow me on Linkedin</label>
+              </a>
+            </figure>
+            <figure class="socialMedia">
+              <a class ="link-media" href="https://www.instagram.com/jean.at2/" target="_blank">
+                <i data-feather="instagram"></i>
+                <label>Follow me on instagram</label>
+              </a>
+            </figure>
+            <figure class="socialMedia">
+              <a class ="link-media" href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
+                <i data-feather="facebook"></i>
+                <label>Follow me on Facebook</label>
+              </a>
+            </figure>
+          </section>
       </section>
-      <section>
-        <h2>Experiências</h2>
-        <p>Freelancer, projetos pessoais e acadêmicos.</p>
-      </section>
-    </sections>
+      <sections class="home">
+        <section class="about-me">
+          <h2 class="sub-title">Sobre mim</h2>
+            <p class="text">Me chamo Jean Carlos, sou da cidade de Vale Real, 
+            terminei recentemente o meu curso de Análise e 
+            Desenvolvimento de Sistemas no IFRS- Campus Feliz.
+            </p>
+        </section>
+        <div class="body">
+            <section class="skills">
+              <figure class="competence">
+                <h2 class="sub-title">Skills</h2>
+                <img src="img/html5.png" alt="Html 5"/>
+                <img src="img/css3.png" alt="CSS 3"/>
+                <img src="img/javascript.png" alt="JavaScript"/>
+              </figure>
+              <figure class="competence">
+                <h2 class="sub-title">Estou estudando</h2>
+                <img src="img/react.png" alt="ReactJS">
+              </figure>
+              <figure class="competence">
+                <h2 class="sub-title">Tenho interesse</h2>
+                <img src="img/nodejs.png" alt="NodeJS">
+              </figure>
+              </section>
+            <section class="expertise">
+              <h2 class="sub-title">Experiências</h2>
+              <p class="text">Freelancer, projetos pessoais e acadêmicos.</p>
+            </section>
+          </sections>
+        </div>
+      </div>
     <script>
       feather.replace()
     </script>
