add-tags-and-dates-in-page2

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
   </head>
   <body class ="root">
     <h1 class="title">Jean Santos</h1>
-    <buttoo>Home</buttoo> 
-    <buttoo></buttoo>
+    <button>Home</button> 
+    <button>Contato</button>
     <div class="body">
       <section class="header">
         <figure>
