--- a/index.html
+++ b/index.html
@@ -1,99 +1,145 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/body.css" />
-    <link rel="stylesheet" href="styles/title.css" />
-    <link rel="stylesheet" href="styles/sub-title.css" />
-    <link rel="stylesheet" href="styles/about-me.css" />
-    <link rel="stylesheet" href="styles/competence.css" />
-    <link rel="stylesheet" href="styles/skills.css" />
-    <link rel="stylesheet" href="styles/link-media.css" />
-    <link rel="stylesheet" href="styles/socialMedia.css" />
-    <link rel="stylesheet" href="styles/svg.css" />
-    <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/home.css" />
-    <link rel="stylesheet" href="styles/text.css" />
-    <link rel="stylesheet" href="styles/expertise.css" />
-    <link rel="stylesheet" href="styles/social-media-me.css" />
-    <script src="https://unpkg.com/feather-icons"></script>
-    <title>Jean Santos - Developer Front-end</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma-rtl.min.css">
+    <title>Jean.dev</title>
   </head>
-  <body class ="root">
-    <h1 class="title">Jean Santos</h1>
-    <div class="body">
-      <section class="header">
-        <figure>
-          <img src="img/profile.png" alt="Minha Foto de Perfil" />
-          <figcaption class="fig-title">Desenvolvedor Front-End</figcaption>
-        </figure>
-        <section class="social-media-me">
-          <h3 class="sub-title ">Redes Sociais</h3>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://github.com/jeanAt2" target="_blank">
-                <i data-feather="github"></i>
-                <label>Follow me on Github</label>
-              <a/>
-            </figure>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
-                <i data-feather="linkedin"></i>
-                <label>Follow me on Linkedin</label>
+  <body>
+    <header>
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://bulma.io">
+            <img src="svg/logo.svg" width="112" height="28">
+          </a>
+          <div id="navbarBasicExample" class="navbar-menu is-active">
+            <div class="navbar-start">
+              <a class="navbar-item" href="index.html">
+                Home
               </a>
-            </figure>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://www.instagram.com/jean.at2/" target="_blank">
-                <i data-feather="instagram"></i>
-                <label>Follow me on instagram</label>
+        
+              <a class="navbar-item" href="contact.html">
+                Contato
               </a>
-            </figure>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
-                <i data-feather="facebook"></i>
-                <label>Follow me on Facebook</label>
-              </a>
-            </figure>
-          </section>
-      </section>
-      <sections class="home">
-        <section class="about-me">
-          <h2 class="sub-title">Sobre mim</h2>
-            <p class="text">Me chamo Jean Carlos, sou da cidade de Vale Real, 
-            terminei recentemente o meu curso de Análise e 
-            Desenvolvimento de Sistemas no IFRS- Campus Feliz.
-            </p>
-        </section>
-        <div class="body">
-            <section class="skills">
-              <figure class="competence">
-                <h2 class="sub-title">Skills</h2>
-                <img src="img/html5.png" alt="Html 5"/>
-                <img src="img/css3.png" alt="CSS 3"/>
-                <img src="img/javascript.png" alt="JavaScript"/>
-              </figure>
-              <figure class="competence">
-                <h2 class="sub-title">Estou estudando</h2>
-                <img src="img/react.png" alt="ReactJS">
-              </figure>
-              <figure class="competence">
-                <h2 class="sub-title">Tenho interesse</h2>
-                <img src="img/nodejs.png" alt="NodeJS">
-              </figure>
-              </section>
-            <section class="expertise">
-              <h2 class="sub-title">Experiências</h2>
-              <p class="text">Freelancer, projetos pessoais e acadêmicos.</p>
-            </section>
-          </sections>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <section class="section">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div class="card">
+              <div class="card-image">
+                <figure class="image is-4by3">
+                  <img src="img/profile.png" alt="Placeholder image">
+                </figure>
+              </div>
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-content">
+                    <p class="title is-4">Jean Carlos</p>
+                    <span class="tag is- is-dark is-medium"> 
+                      Javascript Full Stack Developer
+                    </span>
+                  </div>
+                </div>
+                <!--Informações contato  -->
+                <div class="content">
+                  <p>(51) 9-9768-1102</p>
+                  <p>jeandossanttos1@gmail.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="cloumn is-9">
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  Sobre mim
+                </p>
+              </header>
+              <div class="card-content">
+                <div class="content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.
+                </div>
+              </div>
+            </div>
+            <!-- Experiências -->
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  Experiências
+                </p>
+              </header>
+              <div class="card-content">
+                <div class="columns">
+                  <div class="column">
+                    <figure class="image is-128x128">
+                      <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                    </figure>
+                  </div>
+                  <div class="column is-9">
+                    <div class="content">
+                      <h2 class="title is-5">Javascript Developer  <span class="tag is-dark">Nome Empresa</span></h2>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="columns">
+                  <div class="column">
+                    <figure class="image is-128x128">
+                      <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+                    </figure>
+                  </div>
+                  <div class="column is-9">
+                    <div class="content">
+                      <h2 class="title is-5">Javascript Developer  <span class="tag is-dark">Nome Empresa</span></h2>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Formação -->
+            <div class="card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  Formação
+                </p>
+              </header>
+              <div class="card-content">
+                <div class="content">
+                  <h2 class="title is-5">Javascript fullstack 8 Semanas</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.
+                  </p>
+                </div>
+              </div>
+              <div class="card-content">
+                <div class="content">
+                  <h2 class="title is-5">Análise e Desenvolvimento de Sistemas</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    <script>
-      feather.replace()
-    </script>
+    </section>
   </body>
 </html>
