New Desing Portifolio

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
                 Home
               </a>
         
-              <a class="navbar-item" href="contact.html">
-                Contato
+              <!-- <a class="navbar-item" href="#">
+                My Projects
               </a>
+              <a class="navbar-item" href="#">
+                Contato
+              </a> -->
             </div>
           </div>
         </div>
@@ -44,7 +47,7 @@
                 <div class="media">
                   <div class="media-content">
                     <p class="title is-4">Jean Carlos</p>
-                    <span class="tag is- is-dark is-medium"> 
+                    <span class="tag is-dark is-medium"> 
                       Javascript Full Stack Developer
                     </span>
                   </div>
@@ -66,13 +69,21 @@
               </header>
               <div class="card-content">
                 <div class="content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.
+                  <p>
+                    Me chamo Jean, 27 anos, moro no Vale Real - RS. Amo a minha
+                    família, amo musica, amo codar e poder aprender coisas novas
+                    neste vasto mundo tech. Toco teclado nas horas vagas. No
+                    momento estou empregado por isso ainda não atuo na área,
+                    mas para poder conseguir um pouco de experiência estou
+                    trabalhando em alguns projetinhos próprio para poder aplicar
+                    os conhecimentos adiquiridos e poder contribuir com a
+                    comunidade.
+                  </p>
                 </div>
               </div>
             </div>
             <!-- Experiências -->
-            <div class="card">
+            <!-- <div class="card">
               <header class="card-header">
                 <p class="card-header-title">
                   Experiências
@@ -110,7 +121,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- Formação -->
             <div class="card">
               <header class="card-header">
@@ -121,18 +132,24 @@
               <div class="card-content">
                 <div class="content">
                   <h2 class="title is-5">Javascript fullstack 8 Semanas</h2>
+                  <h3 class="title is-6"> Em andamento</h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.
+                    Curso realizado no intuito de rever conseito básico onde,
+                    aprendi desde a parte de lógica de programação, Git, GitHub.
                   </p>
+                  <label class="tag is-dark is-medium">Frontend</label>
+                  HTML 5, CSS3, Bulma e ReactJS
+                  <br><br>
+                  <label class="tag is-dark is-medium">Backend</label>
+                  NodeJS,MongoDB,TypeScript
                 </div>
               </div>
               <div class="card-content">
                 <div class="content">
                   <h2 class="title is-5">Análise e Desenvolvimento de Sistemas</h2>
+                  <h3 class="title is-6"> Em andamento</h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam laboriosam quam aspernatur minima facilis ratione molestias ullam nihil ducimus maxime excepturi, explicabo earum culpa, rerum voluptatibus laudantium obcaecati, aut velit?
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam minus ipsa nemo sit neque corrupti dolorum odio possimus cum accusantium. Nisi esse accusamus, fugit sit sunt omnis at optio ex.
+                    Curso realizado de 2015 - Previsão de formação 2022;
                   </p>
                 </div>
               </div>
