--- a/index.html
+++ b/index.html
@@ -1,99 +1,141 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/body.css" />
-    <link rel="stylesheet" href="styles/title.css" />
-    <link rel="stylesheet" href="styles/sub-title.css" />
-    <link rel="stylesheet" href="styles/about-me.css" />
-    <link rel="stylesheet" href="styles/competence.css" />
-    <link rel="stylesheet" href="styles/skills.css" />
-    <link rel="stylesheet" href="styles/link-media.css" />
-    <link rel="stylesheet" href="styles/socialMedia.css" />
-    <link rel="stylesheet" href="styles/svg.css" />
-    <link rel="stylesheet" href="styles/header.css" />
-    <link rel="stylesheet" href="styles/home.css" />
-    <link rel="stylesheet" href="styles/text.css" />
-    <link rel="stylesheet" href="styles/expertise.css" />
-    <link rel="stylesheet" href="styles/social-media-me.css" />
-    <script src="https://unpkg.com/feather-icons"></script>
-    <title>Jean Santos - Developer Front-end</title>
-  </head>
-  <body class ="root">
-    <h1 class="title">Jean Santos</h1>
-    <div class="body">
-      <section class="header">
-        <figure>
-          <img src="img/profile.png" alt="Minha Foto de Perfil" />
-          <figcaption class="fig-title">Desenvolvedor Front-End</figcaption>
-        </figure>
-        <section class="social-media-me">
-          <h3 class="sub-title ">Redes Sociais</h3>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://github.com/jeanAt2" target="_blank">
-                <i data-feather="github"></i>
-                <label>Follow me on Github</label>
-              <a/>
-            </figure>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://www.linkedin.com/in/jeandossantosmd" target="_blank">
-                <i data-feather="linkedin"></i>
-                <label>Follow me on Linkedin</label>
-              </a>
-            </figure>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://www.instagram.com/jean.at2/" target="_blank">
-                <i data-feather="instagram"></i>
-                <label>Follow me on instagram</label>
-              </a>
-            </figure>
-            <figure class="socialMedia">
-              <a class ="link-media" href="https://www.facebook.com/jeanSantos.a2/" target="_blank">
-                <i data-feather="facebook"></i>
-                <label>Follow me on Facebook</label>
-              </a>
-            </figure>
-          </section>
-      </section>
-      <sections class="home">
-        <section class="about-me">
-          <h2 class="sub-title">Sobre mim</h2>
-            <p class="text">Me chamo Jean Carlos, sou da cidade de Vale Real, 
-            terminei recentemente o meu curso de Análise e 
-            Desenvolvimento de Sistemas no IFRS- Campus Feliz.
-            </p>
-        </section>
-        <div class="body">
-            <section class="skills">
-              <figure class="competence">
-                <h2 class="sub-title">Skills</h2>
-                <img src="img/html5.png" alt="Html 5"/>
-                <img src="img/css3.png" alt="CSS 3"/>
-                <img src="img/javascript.png" alt="JavaScript"/>
-              </figure>
-              <figure class="competence">
-                <h2 class="sub-title">Estou estudando</h2>
-                <img src="img/react.png" alt="ReactJS">
-              </figure>
-              <figure class="competence">
-                <h2 class="sub-title">Tenho interesse</h2>
-                <img src="img/nodejs.png" alt="NodeJS">
-              </figure>
-              </section>
-            <section class="expertise">
-              <h2 class="sub-title">Experiências</h2>
-              <p class="text">Freelancer, projetos pessoais e acadêmicos.</p>
-            </section>
-          </sections>
-        </div>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet"
+    crossorigin="anonymous">
+
+  <title>Jean Santos - Desenvolvedor Web</title>
+</head>
+
+<body>
+  <header class="header">
+    <div class="first-header">
+      <h1 class="title"> Jean.dev</h1>
+      <nav class="menu">
+        <a class='link'>Sobre mim</a>
+        <a class='link'> Projetos</a>
+        <a class='link'>Serviços</a>
+        <a class='link'>Minhas Skills</a>
+      </nav>
+    </div>
+
+    <div class="media-header">
+      <div class="apresentation">
+        <strong class="title-2">Olá, eu sou o Jean :)</strong>
+        <p>Desenvolvedor Web & Front end</p>
+        <button class="button" onclick="sendCV()">Download CV</button>
+        /*Enviar para o linkThree*/
+        <a class="outlined-button" href="#">Download CV</a>
       </div>
-    <script>
-      feather.replace()
-    </script>
-  </body>
+      <img src="svg/Image Home.svg" alt="Imagem Home">
+    </div>
+  </header>
+  <main class="main">
+    <article class="about-me">
+      <h1 class="title-main">Sobre mim</h1>
+      <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Quibusdam, quae alias! Optio ipsum eaque porro harum, at fugit natus et
+        sunt possimus provident earum, aperiam consectetur, eveniet saepe omnis
+        voluptatem.
+      </p>
+    </article>
+    <nav class="contact">
+      <figure>
+        <img src="svg/smile.svg" alt="Smile">
+        <figcaption class="figCaption">Meu nome</figcaption>
+        <label class="small-text">Jean Santos.</label>
+      </figure>
+      <figure>
+        <img src="svg/mail.svg" alt="E-mail">
+        <figcaption class="figCaption">E-mail</figcaption>
+        <label class="small-text">jeandossanttos1@gmail.com</label>
+      </figure>
+      <figure>
+        <img src="svg/instagram.svg" alt="Instagram">
+        <figcaption class="figCaption">Instagram</figcaption>
+        <label class="small-text">@jeanAt2</label>
+      </figure>
+      <figure>
+        <img src="svg/phone.svg" alt="Phone">
+        <figcaption class="figCaption">Telefone</figcaption>
+        <label class="small-text">(51)-997681102</label>
+      </figure>
+    </nav>
+
+    <article class="proejcts">
+      <h1 class="title-main">Projetos</h1>
+
+      <figure>
+        <img src="" alt="">
+        <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+        <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+      </figure>
+      <img src="" alt="">
+      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+      </figure>
+      <img src="" alt="">
+      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+      </figure>
+      <img src="" alt="">
+      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+      </figure>
+      <img src="" alt="">
+      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+      </figure>
+      <img src="" alt="">
+      <figcaption class="figCaption-2">Titulo do Projeto</figcaption>
+      <label class="small-text-2">Tecnologias: HTML, CSS e JS.</label>
+      </figure>
+    </article>
+    <article class="services">
+      <h1 class="title-main">Serviços</h1>
+      
+      <div class="card">
+        <img src="svg/code.svg" alt="Code">
+        <p class="card-text">
+          Criação de Sites
+        </p>
+      </div>
+      <div class="card">
+        <img src="svg/smartphone.svg" alt="Code">
+        <p class="card-text">
+          Sites responsivos
+        </p>
+      </div>
+    </article>
+
+    <article class="skills">
+      <h1 class="title-main">Minhas skills</h1>
+
+      <div class="card-skills">
+        <img src="svg/icomoon-free_html-five.svg" alt="HTML 5">
+      </div>
+      <div class="card-skills">
+        <img src="svg/fontisto_css3.svg" alt="CSS3">
+      </div>
+      <div class="card-skills">
+        <img src="svg/akar-icons_javascript-fill.svg" alt="JavaScritp">
+      </div>
+      <div class="card-skills">
+        <img src="svg/akar-icons_react-fill.svg" alt="ReactJS">
+      </div>
+    </article>
+  </main>
+
+  <footer class="footer">
+    <p>Feito por <label>Jean Carlos</label></p>
+  </footer>
+
+</body>
+
 </html>
