--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet"
     crossorigin="anonymous">
 
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/global.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/main.css">
   <title>Jean Santos - Desenvolvedor Web</title>
 </head>
 
@@ -18,31 +22,37 @@
     <div class="first-header">
       <h1 class="title"> Jean.dev</h1>
       <nav class="menu">
-        <a class='link'>Sobre mim</a>
-        <a class='link'> Projetos</a>
-        <a class='link'>Serviços</a>
-        <a class='link'>Minhas Skills</a>
+        <a href="#aboute-me" class='link'>Sobre mim</a>
+        <a href="#aboute-me" class='link'> Projetos</a>
+        <a href="#aboute-me" class='link'>Serviços</a>
+        <a href="#aboute-me" class='link'>Minhas Skills</a>
       </nav>
     </div>
 
     <div class="media-header">
       <div class="apresentation">
-        <strong class="title-2">Olá, eu sou o Jean :)</strong>
-        <p>Desenvolvedor Web & Front end</p>
-        <button class="button" onclick="sendCV()">Download CV</button>
-        /*Enviar para o linkThree*/
-        <a class="outlined-button" href="#">Download CV</a>
+        <h2 class="title-2">Olá, eu sou o Jean :)</h2>
+        <p class="description">Desenvolvedor Web & Front end</p>
+        <div class="sub-menu">
+          <button class="button" onclick="sendCV()">Download CV</button>
+          <!-- Enviar para o linkThree  -->
+          <div class="outlined-button">
+            <a href="#">Download CV</a>
+          </div>
+        </div>
+
       </div>
       <img src="svg/Image Home.svg" alt="Imagem Home">
     </div>
   </header>
   <main class="main">
     <article class="about-me">
-      <h1 class="title-main">Sobre mim</h1>
+      <h1 class="title-main" id="aboute-me">Sobre mim</h1>
       <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Quibusdam, quae alias! Optio ipsum eaque porro harum, at fugit natus et
         sunt possimus provident earum, aperiam consectetur, eveniet saepe omnis
         voluptatem.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima sunt autem repellendus aut deleniti dicta neque, maiores excepturi velit fuga harum ipsa doloribus ut nostrum magnam ipsam distinctio, quibusdam obcaecati.
       </p>
     </article>
     <nav class="contact">
@@ -99,7 +109,7 @@
     </article>
     <article class="services">
       <h1 class="title-main">Serviços</h1>
-      
+
       <div class="card">
         <img src="svg/code.svg" alt="Code">
         <p class="card-text">
